samples/_failures_safe/1761317511_9bf928_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9155212a.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_9155212a.c:162:9: error: expected expression at end of input
  162 |         case
      |         ^~~~
./samples/SAFE/__tmp_9155212a.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9155212a.c:162:9: error: expected declaration or statement at end of input
